made this change to fix alignment of error message and extra space

--- a/node-app/src/views/core/components/content/container/style.scss
+++ b/node-app/src/views/core/components/content/container/style.scss
@@ -484,7 +484,7 @@ ul {
     }
     form :not(:last-child){
 
-        margin-right: 10px;
+        padding-right: 10px;
     }
     .cmp-text > :last-child{
         margin: 0;
